<resources>
    <string name="app_name">MAS Cover</string>
    <string name="hello_blank_fragment">Bonjour</string>
    <string name="categorie_title">Catégorie</string>
    <string name="add_favourrite">Ajouter aux favoris</string>
    <string name="my_favourite">Mes favoris</string>
    <string name="setting">Paramètres</string>
    <string name="set_as_wallpaper">Définir Fond Ecran</string>
    <string name="feedback">Vos Avis</string>
    <string name="notFavourite">notFavourite</string>
    <string name="isFavourite">isFavourite</string>
    <string name="emptyFavourite">Rien a été ajoutés</string>
    <string name="develop">En cours de développement</string>
    <string name="acceuil">Acceuil</string>
    <string name="lock">Verrouillage</string>
    <string name="both">Acceuil et Verrouillage</string>
    <string name="choiceLangue">Langue de l`application</string>
    <string name="goUpdate">Mettre à jour</string>
    <string name="newVersion">Nouvelle version sur le Store</string>
    <string name="cancel">Annuler</string>
    <string name="noInternet">Vérifier votre connexion</string>
    <string name="languages">Langues</string>
    <string name="notification">Notifications</string>
    <string name="notificationActive">Activer les notifications</string>
    <string name="linkTelegram">Lien du groupe</string>
    <string name="copy">Copier</string>
    <string name="shareLink">Partager</string>
    <string name="appInfo">Informations sur l\'application</string>
    <string name="version">Version</string>
    <string name="shareApp">Partager l\'application</string>
    <string name="download">Télécharger l\'image</string>
    <string name="demoTwo">Définir en tant que fond d\'écran</string>
    <string name="demoOne">Télécharger l\'image</string>
    <string name="flashOn">Allumez le Flash</string>
    <string name="screenOn">Affichez un écran jaune</string>
    <string name="ok">Ok</string>
    <string name="error">Désolé une erreur s\'est produite</string>
    <string name="backHome">Revenir à l\'acceuil</string>

</resources>