<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_gray"
    tools:context=".ui.wallpaper.ListWallpaperFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_rounded_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/settingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mandarin_regular"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="6dp"
        android:background="@color/main_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/settingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingTitle"
        app:layout_constraintTop_toTopOf="@+id/settingTitle"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="6dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/settingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingTitle"
        app:layout_constraintTop_toTopOf="@+id/settingTitle"
        app:layout_constraintVertical_bias="0.4" />


    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_rounded_bg"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bottom_rounded_yellow_bg"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <View
        android:id="@+id/homeBack"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/custom_cercle_home"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"/>

    <View
        android:id="@+id/favouriteBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_cercle_home"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/homeBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"/>

    <View
        android:id="@+id/settingBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_cercle_home"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeBack"
        app:layout_constraintTop_toTopOf="@+id/view2"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="18dp"
        android:src="@drawable/accueil"
        app:layout_constraintBottom_toBottomOf="@+id/homeBack"
        app:layout_constraintEnd_toEndOf="@+id/homeBack"
        app:layout_constraintStart_toStartOf="@+id/homeBack"
        app:layout_constraintTop_toTopOf="@+id/homeBack" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="14dp"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="@+id/favouriteBack"
        app:layout_constraintEnd_toEndOf="@+id/favouriteBack"
        app:layout_constraintStart_toStartOf="@+id/favouriteBack"
        app:layout_constraintTop_toTopOf="@+id/favouriteBack" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="14dp"
        android:src="@drawable/settings_fill"
        app:layout_constraintBottom_toBottomOf="@+id/settingBack"
        app:layout_constraintEnd_toEndOf="@+id/settingBack"
        app:layout_constraintStart_toStartOf="@+id/settingBack"
        app:layout_constraintTop_toTopOf="@+id/settingBack"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="80dp"
        app:layout_constraintBottom_toTopOf="@+id/homeBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/develop"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:fontFamily="@font/mandarin_regular"
        android:text="@string/develop"
        android:textColor="@color/main_yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/animationLoading"
        app:layout_constraintVertical_bias="0.8" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="14dp"
        android:src="@drawable/only_mas_cover"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <Switch
        android:id="@+id/switch_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTitle" />

    <TextView
        android:id="@+id/frensh_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="Français"
        app:layout_constraintBottom_toBottomOf="@+id/switch_fr"
        app:layout_constraintEnd_toStartOf="@+id/switch_fr"
        app:layout_constraintTop_toTopOf="@+id/switch_fr" />


    <Switch
        android:id="@+id/switch_ar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_fr" />

    <TextView
        android:id="@+id/arab_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="العربية"
        app:layout_constraintBottom_toBottomOf="@+id/switch_ar"
        app:layout_constraintEnd_toStartOf="@+id/switch_ar"
        app:layout_constraintTop_toTopOf="@+id/switch_ar" />

    <TextView
        android:id="@+id/langueChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/choiceLangue"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/mandarin_regular"
        app:layout_constraintBottom_toBottomOf="@+id/switch_ar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_fr" />


    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/main_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_ar" />

</androidx.constraintlayout.widget.ConstraintLayout>