<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_cl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".ui.home.HomeFragment">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_rounded_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="80dp"
        app:layout_constraintBottom_toTopOf="@+id/homeBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_constraintBottom_toTopOf="@+id/homeBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        tools:listitem="@layout/categorie_item" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bottom_rounded_yellow_bg"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_rounded_bg"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/homeBack"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/custom_cercle_home"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"/>

    <View
        android:id="@+id/favouriteBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_cercle_home"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/homeBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"/>

    <View
        android:id="@+id/settingBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_cercle_home"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeBack"
        app:layout_constraintTop_toTopOf="@+id/view2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="18dp"
        android:src="@drawable/accueil_fill"
        app:layout_constraintBottom_toBottomOf="@+id/homeBack"
        app:layout_constraintEnd_toEndOf="@+id/homeBack"
        app:layout_constraintStart_toStartOf="@+id/homeBack"
        app:layout_constraintTop_toTopOf="@+id/homeBack" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="14dp"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="@+id/favouriteBack"
        app:layout_constraintEnd_toEndOf="@+id/favouriteBack"
        app:layout_constraintStart_toStartOf="@+id/favouriteBack"
        app:layout_constraintTop_toTopOf="@+id/favouriteBack" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="14dp"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@+id/settingBack"
        app:layout_constraintEnd_toEndOf="@+id/settingBack"
        app:layout_constraintStart_toStartOf="@+id/settingBack"
        app:layout_constraintTop_toTopOf="@+id/settingBack"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9891641863040459/4866399667"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorieTitle" />

    <TextView
        android:id="@+id/categorieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mandarin_regular"
        android:text="@string/categorie_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="6dp"
        android:background="@color/main_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/categorieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categorieTitle"
        app:layout_constraintTop_toTopOf="@+id/categorieTitle"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="6dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/categorieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categorieTitle"
        app:layout_constraintTop_toTopOf="@+id/categorieTitle"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/demo_three_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#CB000000"
        android:layout_marginTop="-12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7"
        app:layout_constraintVertical_bias="1.0">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationDown"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="-12dp"
            android:padding="20dp"
            android:rotation="90"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/down"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view16"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/demo_white_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationDown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="1/2"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view16"
            app:layout_constraintTop_toTopOf="@+id/view16" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashOn"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view16" />

        <TextView
            android:id="@+id/okDemo_one"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_margin="4dp"
            android:background="@drawable/demo_black_bg"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view16"
            app:layout_constraintEnd_toEndOf="@+id/view16" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/demo_four_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#CB000000"
        android:visibility="gone"
        android:layout_marginTop="-12dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7"
        app:layout_constraintVertical_bias="1.0">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationright"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            android:layout_marginEnd="-12dp"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/down"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view17"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/demo_white_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationright" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="2/2"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view17"
            app:layout_constraintTop_toTopOf="@+id/view17" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screenOn"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view17" />

        <TextView
            android:id="@+id/okDemo_three"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_margin="4dp"
            android:background="@drawable/demo_black_bg"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view17"
            app:layout_constraintEnd_toEndOf="@+id/view17" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="14dp"
        android:src="@drawable/only_mas_cover"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <ImageView
        android:id="@+id/flash_iv"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:padding="20dp"
        android:src="@drawable/flash_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <ImageView
        android:id="@+id/yellow_iv"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:padding="20dp"
        android:src="@drawable/yellow_screen"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>